#10 Fix logout button align in mobile version

--- a/src/warp.scss
+++ b/src/warp.scss
@@ -495,12 +495,13 @@ $gradient-darker-darker: #002f4d;
   @media screen and (max-width: 768px) and (min-width: 701px) {
     .warp-menu-column-menu {
       .warp-menu-shift-container {
-        .warp-menu-category-list {
+        .warp-menu-shift-container .warp-menu-category-list {
           column-count: 4;
           columns: 4;
 
-          li.warp-menu-logout-list-element {
+          > li.warp-menu-logout-list-element {
             width: 25%;
+            right: 0;
           }
         }
       }
@@ -513,13 +514,14 @@ $gradient-darker-darker: #002f4d;
         background-image: repeating-linear-gradient(to right, $brand-primary-darker, $brand-primary-darker 28%, $brand-primary-darker 30%, $gradient-darker-darker 33.33333%);
       }
     }
-    .warp-menu-category-list {
+    .warp-menu-shift-container .warp-menu-category-list {
       width: 100vw;
       columns: 3;
       column-count: 3;
 
-      li.warp-menu-logout-list-element {
+      > li.warp-menu-logout-list-element {
         width: 33.33%;
+        right: 0;
       }
     }
     .warp-menu-gradient-overlay {
@@ -533,12 +535,13 @@ $gradient-darker-darker: #002f4d;
         background-image: repeating-linear-gradient(to right, $brand-primary-darker, $brand-primary-darker 45%, $brand-primary-darker 48%, $gradient-darker-darker 50%);
       }
     }
-    .warp-menu-category-list {
+    .warp-menu-shift-container .warp-menu-category-list {
       width: 100vw;
       columns: 160px;
 
-      li.warp-menu-logout-list-element {
+      > li.warp-menu-logout-list-element {
         width: 50%;
+        right: 0;
       }
     }
     .warp-menu-gradient-overlay {
